Made the menu responsive, calendar fixes
Love the changes jack, just needed to move the rules around a bit so it
doesn't break at smaller resolutions. I hated the old hover effects, but
I think it does need some kind of effect though. Not sure what to add
though.

--- a/main.css
+++ b/main.css
@@ -176,8 +176,7 @@ display:none;
 	/*min-width: 50em;*/
 	padding-bottom: 1.3em;
 	position:fixed;
-	top: -10px;
-	left:50%;
+	left: 48%;
 	border-radius:10px;
 	padding: 5px 5px 5px 5px;
 	margin:5px;
@@ -197,7 +196,7 @@ display:none;
 }
 
 #mainMenu a, #adminMenu a{
-	padding: 10px;
+	padding: 4px; /*Anything more then this and the text starts to wrap when scaled down.*/
 }
 .menuLink{
 	display: inline;
@@ -249,7 +248,6 @@ display:none;
 	overflow:auto;
 	padding: 4em;
 	padding-bottom: 50px;  /* must be same height as the footer */
-	width: 90%;
     margin: auto;
 } 
 
@@ -729,7 +727,17 @@ font-weight: bold;
 background: lightblue;
 border: 3px solid black;
 }
-
+	#mainContent > table.vcalendar > tbody > tr {
+		height:110px;
+	}
+	#mainContent > table.vcalendar > tbody > tr#attendanceRow,#mainContent > table.vcalendar > tbody > tr#monthTitle ,#mainContent > table.vcalendar > tbody > tr#days  {
+		height:10px;
+	}
+	#mainContent > table.vcalendar > tbody > tr:first-child td {
+		border: 0px solid white;
+		border-width: 0px 10px;
+		border-radius: 20px;
+	}
 /* ===================  Main Content Section  =============================== */
 /* -------------------  Call in sick Page     ------------------------------- */
 
@@ -1195,7 +1203,7 @@ because with max width
 		background: linear-gradient(to bottom, #45484d 0%,#000000 100%);
 		margin: -3px 0px 0px 0px;
 		position: fixed;
-		width: 988px;
+		width: 956px;
 		color: white;
 		border-radius:0px 0px 15px 15px;
 		opacity: 0.8;
@@ -1203,13 +1211,16 @@ because with max width
 	}
 	#studentInfo{
 		position: fixed;
-		top: 46px;
+		top: 36px;
 		color: white;
 		margin-left: 11px;
 	}
 		#mainContent{
 		padding-top: 70px;
 	}  
+	#classtitle{
+		margin-top: 10px;
+	}
 }
 /*************************************************/
 @media screen and (min-width: 1200px){
@@ -1225,7 +1236,8 @@ because with max width
 	}
 	#mainMenu{
 		font-size:18px;
-		left: 46%;
+		left: 47%;
+		top: -10px;
 			/*background-color:black;*/
 	}
 	#toolmenu{
@@ -1245,7 +1257,7 @@ because with max width
 		background: linear-gradient(to bottom, #45484d 0%,#000000 100%);
 		margin: -17px 0px 0px 0px;
 		position: fixed;
-		width: 1204px;
+		width: 1196px;
 		color: white;
 		border-radius:0px 0px 15px 15px;
 		opacity: 0.8;
@@ -1260,16 +1272,5 @@ because with max width
 	#mainContent{
             padding-top: 70px;
 	}  
-	#mainContent > table.vcalendar > tbody > tr {
-		height:110px;
-	}
-	#mainContent > table.vcalendar > tbody > tr#attendanceRow,#mainContent > table.vcalendar > tbody > tr#monthTitle ,#mainContent > table.vcalendar > tbody > tr#days  {
-		height:10px;
-	}
-	#mainContent > table.vcalendar > tbody > tr:first-child td {
-		border: 0px solid white;
-		border-width: 0px 10px;
-		border-radius: 20px;
-	}
 	
 }
